--- a/radik20.2.html
+++ b/radik20.2.html
@@ -196,7 +196,7 @@
         <h2>Movies</h2>
         <div class="movie-gallery" id="movieGallery">
             <div class="movie-card">
-                <a href="file:///C:/code/GarryPotter.html" target="_blank">
+                <a href="file:///C:/code/%D0%BC%D0%B5%D0%B4%D0%B8%D0%B0_%D0%B4%D0%BB%D1%8F_%D1%81%D0%B0%D0%B9%D1%82%D0%B0/GarryPotter.html" target="_blank">
                 <img src="c:\Users\nigger\Pictures\Screenshots\Снимок экрана 2024-12-01 132712.png" alt="Movie 1">
             </a>
                 <div class="info">
